# gh-search

./: .env.example  .gitignore  README.md  pyproject.toml
docs/product/: prd.md  tech_specs.md
docs/tmux/gh-search-team/: PRODUCT_BACKLOG.md  README.md  WHITEBOARD.md  setup-team.sh  workflow.md
docs/tmux/gh-search-team/prompts/: DEV_PROMPT.md  PO_PROMPT.md  TL_PROMPT.md
docs/tmux/gh-search-team/sprints/sprint-0/: SPRINT_BACKLOG.md
docs/tmux/gh-search-team/sprints/sprint-1/: SPRINT_BACKLOG.md
docs/tmux/gh-search-team/sprints/sprint-1/results/: fetch-100-readmes-report.md  sample-three-repos.md
docs/tmux/gh-search-team/sprints/sprint-1/specs/: clean-up-project-structure.md  fetch-100-readmes.md
docs/tmux/gh-search-team/sprints/sprint-2/: SPRINT_BACKLOG.md
docs/tmux/gh-search-team/sprints/sprint-2/specs/: resumable-background-service.md
experiments/: test_connections.py
scripts/: check_fetch_status.py  fetch_readmes.py  fetch_readmes_background.sh  watchdog.py
src/gh_search/: __init__.py
tests/: __init__.py
